--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -106,6 +106,24 @@ main{
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+
+            article{
+                width: calc(100% / 6);
+
+                img{
+                    width: 170px;
+                    height: 170px;
+                    margin-top: 1rem;
+                }
+            
+                div.card-container h3{
+                    padding-top: .8rem;
+                    color: $whiteText;
+                    text-transform: uppercase;
+                    font-weight: 400;
+                    font-size: .8rem;
+                }
+            }
         }
     }
 
