gave to my cards, border radius 0 and borders none

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -114,6 +114,8 @@ main{
                     width: 170px;
                     height: 170px;
                     margin-top: 1rem;
+                    border-radius: 0;
+                    border: none;
                 }
             
                 div.card-container h3{
