modifyied the path of the images

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -190,7 +190,7 @@ section{
 
 
 footer{
-    background-image: url('../assets/images/img/footer-bg.jpg');
+    background-image: url('../img/footer-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -225,7 +225,7 @@ footer{
         div.logo-item{
             height: 100%;
             width: 563px;
-            background-image: url('../assets/images/img/dc-logo-bg.png');
+            background-image: url('../img/dc-logo-bg.png');
             background-repeat: no-repeat;
             background-position: center;
         }
